<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="unit">Unit</string>
    <string name="jiuzuo_remind">Sedentary Reminder</string>
    <string name="call_remind">Incoming Call Alert</string>
    <string name="band_alarm_remind">Smart Alarm Clock</string>
    <string name="message_remind">Message Reminder</string>
    <string name="app_name">CoBand</string>
    <string name="join_imco">Join CoBand</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password (6&#8211;15 letter or number)</string>
    <string name="hint_email">Email</string>
    <string name="next">Next Step</string>
    <string name="agreement">By clicking Register, you agree to <a href="http://www.priodigit.com/a/guanyu/36.html?1516119758"> CoBand User Agreements</a></string>
    <string name="email_format_error_tips">Email address format is invalid, please enter a valid Email address.</string>
    <string name="ok">OK</string>
    <string name="forgot_password">Forget your password?</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="nickname">Nick name</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="send_email">Sending an Email.</string>
    <string name="send_email_tips">An email has been sent to your registered email with further instruction on how to reset your password; if you do not receive this email, please check in your junk mail folder.</string>
    <string name="hint_input_register_email">Please enter your Email address.</string>
    <string name="unkonw_error">Unknown error occurred</string>
    <string name="unkonw_error_tips">Unknown error. Please check your internet connection.</string>
    <string name="leaderboard">Leader board</string>
    <string name="calory">Calories</string>
    <string name="km">km</string>
    <string name="step">Steps</string>
    <string name="today">Today</string>
    <string name="day_step_ave">Average steps</string>
    <string name="total_step">Total steps</string>
    <string name="no_data">No data</string>
    <string name="no_sleep_data">no sleep data</string>
    <string name="no_heart_rate_data">no heart rate data</string>
    <string name="no_weight_data">no weight data</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="take_photo">Take a picture</string>
    <string name="hour">Hour</string>
    <string name="hour_short">hr.</string>
    <string name="minute">Minute</string>
    <string name="minute_short">min.</string>
    <string name="share">Share</string>
    <string name="best_single_day">Best of steps: %d on a single day</string>
    <string name="not_support_ble">Your phone does not support Bluetooth 4.0</string>
    <string name="band_target">Goals</string>
    <string name="heart_rate">Heart rate</string>
    <string name="sleep">Sleep</string>
    <string name="sport">Sports</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="band_target_settings_tips">Big changes start with smalls. Set a small goal, 	pursue it with confidence, live a healthy life!</string>
    <string name="step_unit">Step</string>
    <string name="find_band">Find bracelet</string>
    <string name="shake">Shake to take a picture</string>
    <string name="sedentary_tips">The bracelet vibrates once it detects user remain inactive over the set time.</string>
    <string name="band_alarm_off">Off</string>
    <string name="lose_warn">Intelligent Anti-lost</string>
    <string name="screen_sleep_remind">Screen time</string>
    <string name="five_seconds">5 seconds</string>
    <string name="search_band_tips">Please make sure the bracelet is close to your phone, and bracelet has sufficient battery.</string>
    <string name="cancel">Cancel</string>
    <string name="search_retry">Retry</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="modify_band_name">Edit your bracelet name</string>
    <string name="unbind_band">Unbind your bracelet</string>
    <string name="measure">Measure</string>
    <string name="light_sleep">Light sleep</string>
    <string name="wake">Awake</string>
    <string name="walk">Walk</string>
    <string name="lack_sleep">Lack</string>
    <string name="poor_sleep">Poor</string>
    <string name="good_sleep">Good</string>
    <string name="sleep_quality">Quality</string>
    <string name="target_completion">Goal completed</string>
    <string name="sport_distance">Distance</string>
    <string name="band_day_ave_step">Daily steps</string>
    <string name="yesterday">Yesterday</string>
    <string name="killo_calory">Kcal</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="one_week">One week</string>
    <string name="shake_camera_tip">Shake wrist when wearing bracelet, and your phone will take pictures.</string>
    <string name="camera_fail_tip">Fail to take the picture, please try again.</string>
    <string name="process_is_complete">Process completed successfully</string>
    <string name="processing">Processing …</string>
    <string name="one_day_sleep">One day sleep</string>
    <string name="day_ave_sleep">Daily sleep time</string>
    <string name="times">times</string>
    <string name="average">Average</string>
    <string name="check_network">Connection failed, please check your network</string>
    <string name="last_heart_rate_testing">Last measurement result</string>
    <string name="measuring">Measuring</string>
    <string name="device_disconnected">Band is disconnected</string>
    <string name="reset_success">Reset successfully</string>
    <string name="exit_tips">Ready to exit?</string>
    <string name="fragment_help_title">Get help</string>
    <string name="imco">CoBand</string>
    <string name="band_agreement_privacy">User agreement and privacy policy</string>
    <string name="current_version">Current version</string>
    <string name="reset_title">Warning</string>
    <string name="reset_tips">The operation will delete the steps and sleep data in the smartphone App. To activate the bracelet, you need to recover factory settings and reconnect it to your phone.</string>
    <string name="lose_warning_tips">When the bracelet is far away from the phone over certain distance, the phone will beep/ring to remind you.</string>
    <string name="keep_connected">Band and phone keep connected.</string>
    <string name="remind_time">Remind Ttime</string>
    <string name="band_alarm">Bracelet Alarm</string>
    <string name="fifth_seconds">15 seconds</string>
    <string name="ten_seconds">10 seconds</string>
    <string name="screen_sleep_time">Time to turn off screen</string>
    <string name="update_image_tips">New version of firmware detected.</string>
    <string name="update_image_title">Update the firmware</string>
    <string name="confire_is_network_available">Please confirm the network is available.</string>
    <string name="please_connect_bracelet">Please connect your bracelet with phone.</string>
    <string name="open">Opened</string>
    <string name="close">Closed</string>
    <string name="seconds">seconds</string>
    <string name="everyday">daily</string>
    <string name="card_never_bond">You need a smart fitness bracelet to perfect your intelligent life!</string>
    <string name="card_unbond">If you already have an iMCO bracelet, please remember to pair it.</string>
    <string name="card_bad_sleep">Your sleep time is below average, and sleep quality is poor. Please take care of yourself even though you are busy.</string>
    <string name="card_normal_sleep">Your sleep quality is normal, relax and have a good sleep.</string>
    <string name="card_good_sleep">Your sleep quality is good, continue the healthy lifestyle.</string>
    <string name="card_no_sport_goal">Why not set your exercise goals to jump-start a healthy lifestyle!</string>
    <string name="card_no_sleep_goal">To make sure you have the high energy for work and study, let us start setting a goal for your sleep time</string>
    <string name="card_goal_20000">OMG, you have exceeded your goal.</string>
    <string name="card_goal_16000">Unbelievable! You have accomplished your goal.</string>
    <string name="card_goal_8000">Congratulations on your goal achievement.</string>
    <string name="card_goal_4000">Good, you have achieved your goal.</string>
    <string name="card_goal_2000">Yes, you are so close to your goal.</string>
    <string name="modify_avatar">Edit image</string>
    <string name="card_sleep_completed">Goal achieved</string>
    <string name="card_welcome">Thanks for joining iMCO</string>
    <string name="card_leadboard_in_100">Congratulations on winning top %1$s ranking</string>
    <string name="card_sport_uncomplete_step">Wow, you only need %1$s more steps to achieve the goal.</string>
    <string name="note_lost">Anti lLost Rreminder</string>
    <string name="message_note_lost">Your smart bracelet is out of the safe distance.</string>
    <string name="inch">Inch</string>
    <string name="metric_system">Metric</string>
    <string name="twenty_seconds">20 seconds</string>
    <string name="twenty_five_seconds">25 seconds</string>
    <string name="below_90">&lt; 90</string>
    <string name="below_60">&lt; 60</string>
    <string name="below_120">90-119</string>
    <string name="below_80">60-79</string>
    <string name="num_120_129">120-129</string>
    <string name="num_80_84">80-84</string>
    <string name="num_130_139">130-139</string>
    <string name="num_85_89">85-89</string>
    <string name="num_90_99">90-99</string>
    <string name="num_160_179">160-179</string>
    <string name="num_100_109">100-109</string>
    <string name="num_140_159">140-159</string>
    <string name="up_180">≥180</string>
    <string name="up_110">≥110</string>
    <string name="up_140">≥140</string>
    <string name="default_mmhg">* (mmhg)</string>
    <string name="normal_high_text">High normal</string>
    <string name="normal_blood_text">Normal</string>
    <string name="ideal">Desired</string>
    <string name="level_one">Stage 1 hypertension</string>
    <string name="level_two">Stage 2 hypertension</string>
    <string name="level_three">Hypertensive urgency</string>
    <string name="low_blood">Hypotension</string>
    <string name="now_start_text">In order to avoid measure error, please try to keep quiet during the blood pressure, relax the body, do not talk and not move the body during the measurement.</string>
    <string name="about_blood">Classification of blood pressure</string>
    <string name="about_blood_text">Blood pressure (BP) is the pressure of circulating blood on the walls of blood vessels.is measured in millimeters of mercury (mmHg)</string>
    <string name="blood_level_set_title">Classification of blood pressure</string>
    <string name="category">Classification</string>
    <string name="shrink">systolic *</string>
    <string name="diastole">diastolic *</string>
    <string name="pure">Isolated systolic hypertension</string>
    <string name="blood_warning">This app is solely intended for fitness and wellness purposes only and is not intended for use in the diagnosis of disease or other conditions.</string>
</resources>