<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:theme="@style/theme_band_firebrick">


    <RadioButton
        android:id="@+id/btn_five_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/five_seconds"
        android:textAlignment="viewEnd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_black"/>


    <RadioButton
        android:id="@+id/btn_ten_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/ten_seconds"
        android:textAlignment="viewEnd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_black"/>

    <RadioButton
        android:id="@+id/btn_fifteen_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/fifth_seconds"
        android:textAlignment="viewEnd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_black"/>

    <RadioButton
        android:id="@+id/btn_twenty_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/twenty_seconds"
        android:textAlignment="viewEnd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_black"/>

    <RadioButton
        android:id="@+id/btn_twenty_five_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/twenty_five_seconds"
        android:textAlignment="viewEnd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_black"/>

</RadioGroup>